projects/001-roman-numerals-converter/cf-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: 'Roman Numerals Converter Web application'
Parameters:
  EC2InstanceType:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small

  LinuxAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

  KeyName:
    Description: Name of an existing EC2 KeyPair
    Type: AWS::EC2::KeyPair::KeyName

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH + HTTP
      VpcId: vpc-0a8eb270
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LinuxAmiId
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      InstanceType: !Ref EC2InstanceType
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: 0
          AssociatePublicIpAddress: true
          SubnetId: subnet-ccd5e2f2
          GroupSet:
            - !Ref InstanceSecurityGroup

      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            yum update -y
            yum install python3 -y
            cd ~
            wget "https://raw.githubusercontent.com/mucahit-k/aws-projects/master/001-roman-numerals-converter/app.py"
            mkdir templates && cd templates
            wget "https://raw.githubusercontent.com/mucahit-k/aws-projects/master/001-roman-numerals-converter/templates/index.html"
            wget "https://raw.githubusercontent.com/mucahit-k/aws-projects/master/001-roman-numerals-converter/templates/result.html"
            pip3 install flask
            python3 ~/app.py

Outputs:
  PublicIp:
    Value: 
      Fn::GetAtt:
        - EC2Instance
        - PublicIp
    Description: Application URL
